src/test/deca/context/invalid/decl_var_already_declared_in_class.deca
// Test la règle 3.17: déclaration d'une variable déjà existante dans la 
// méthode de la même classe

class A {
    int x = 12;
    int x;
}

// Resultat:
//# src/test/deca/context/invalid/decl_var_already_declared_in_class.deca:6:8: The field "x" is already declared : rule 2.4
